# relatum

./: .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  README.md  justfile
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  images.yml  release.yml
crates/relatum-api/: Cargo.toml
crates/relatum-api/examples/: export-openapi.rs
crates/relatum-api/src/: error.rs  extract.rs  lib.rs  openapi.rs  routes.rs  spec.rs  state.rs
crates/relatum-api/src/dtos/: auth.rs  meta.rs  mod.rs  report.rs  signature.rs  user.rs
crates/relatum-api/src/handlers/: auth.rs  meta.rs  mod.rs  reports.rs  signature.rs  sso.rs  users.rs
crates/relatum-api/tests/: http.rs
crates/relatum-cli/: Cargo.toml
crates/relatum-cli/src/: main.rs  output.rs  token.rs
crates/relatum-client/: Cargo.toml  build.rs
crates/relatum-client/src/: lib.rs
crates/relatum-domain/: Cargo.toml
crates/relatum-domain/src/: errors.rs  lib.rs  testing.rs
crates/relatum-domain/src/models/: auth.rs  department.rs  ids.rs  meta.rs  mod.rs  report.rs  signature.rs  users.rs  week.rs
crates/relatum-domain/src/ports/: directory.rs  ephemeral.rs  ids.rs  mod.rs  reportstorage.rs  session.rs  signaturestorage.rs  sso_connector.rs  status.rs  userstorage.rs
crates/relatum-domain/src/services/: admin.rs  auth.rs  meta.rs  mod.rs  report.rs  signature.rs  sync.rs
crates/relatum-export/: Cargo.toml
crates/relatum-export/fonts/: README.md
crates/relatum-export/src/: fonts.rs  lib.rs  markdown.rs  text.rs
crates/relatum-infra/: Cargo.toml
crates/relatum-infra/migrations/: 0001_create_users_and_reports.sql  0002_add_signatures.sql
crates/relatum-infra/src/: db.rs  directory.rs  ids.rs  lib.rs
crates/relatum-infra/src/repositories/: mod.rs
crates/relatum-infra/src/repositories/ephemeral/: memory.rs  mod.rs  valkey.rs
crates/relatum-infra/src/repositories/report/: memory.rs  mod.rs  postgres.rs
crates/relatum-infra/src/repositories/session/: memory.rs  mod.rs  valkey.rs
crates/relatum-infra/src/repositories/signature/: memory.rs  mod.rs  postgres.rs
crates/relatum-infra/src/repositories/user/: memory.rs  mod.rs  postgres.rs
crates/relatum-infra/src/sso/: disabled.rs  mod.rs  oidc.rs
crates/relatum-server/: Cargo.toml  config.example.toml  config.toml
crates/relatum-server/src/: config.rs  main.rs
crates/relatum-web/: Cargo.toml
crates/relatum-web/src/: error.rs  main.rs  markdown.rs  session.rs  state.rs  view.rs
crates/relatum-web/src/handlers/: admin.rs  auth.rs  meta.rs  mod.rs  reports.rs  signature.rs  theme.rs
crates/relatum-web/static/: app.css
crates/relatum-web/templates/: _report_row.html  _user_row.html  admin.html  dashboard.html  error.html  layout.html  login.html  report.html  report_new.html  signature.html
deploy/helm/relatum-server/: .gitignore  Chart.yaml  README.md  values.yaml
deploy/helm/relatum-server/templates/: NOTES.txt  _helpers.tpl  _validate.tpl  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  postgres.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/helm/relatum-web/: Chart.yaml  README.md  values.yaml
deploy/helm/relatum-web/templates/: NOTES.txt  _helpers.tpl  _validate.tpl  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
scripts/: update-htmx.sh
