[package]
name = "relatum-web"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "relatum-web"
path = "src/main.rs"

[dependencies]
# Like the CLI, the web frontend owns no HTTP of its own: it drives the API through
# the generated typed client, so its calls cannot drift from the server contract.
relatum-client = { workspace = true }

# Server-side rendering: axum serves the routes, askama renders the HTML, and
# axum-extra's cookie jar carries the http-only session cookie.
axum = { workspace = true }
axum-extra = { workspace = true }
askama = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
jiff = { workspace = true }
pulldown-cmark = { workspace = true }
ammonia = { workspace = true }
time = { workspace = true }
base64 = { workspace = true }
